--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
     <link rel="icon" href="../public/images/favicon.png" />
     <link rel="stylesheet" href="../public/stylesheets/style.css" />
@@ -38,7 +38,7 @@
     </div>
     <div class="container">
       <div class="logo">
-        <a href="/"><img src="../public/images/pokedle-logo.png" /></a>
+        <a href="/"><img alt="" src="../public/images/pokedle-logo.webp" /></a>
       </div>
       <div id="subtitle">
         Sto pensando ad un Pokémon ... riesci ad indovinarlo?
