--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
     <link rel="icon" href="../public/images/favicon.png" />
     <link rel="stylesheet" href="../public/stylesheets/style.css" />
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="logo">
-        <a href="/"><img src="../public/images/pokedle-logo.png" /></a>
+        <a href="/"><img alt="" src="../public/images/pokedle-logo.webp" /></a>
       </div>
       <div id="subtitle">
         <h1>User: <%= name %></h1>
