--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,11 @@
   <head>
     <link rel="icon" href="../public/images/favicon.png" />
     <link rel="stylesheet" href="../public/stylesheets/style.css" />
+    <link
+      rel="manifest"
+      type="application/manifest+json"
+      href="../app.webmanifest"
+    />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Profile</title>
   </head>
