--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <link rel="icon" href="../public/images/favicon.png" />
-    <link rel="stylesheet" href="../public/stylesheets/style.css" />
+    <link rel="icon" href="/public/images/favicon.png" />
+    <link rel="stylesheet" href="/public/stylesheets/style.css" />
     <link
       rel="manifest"
       type="application/manifest+json"
-      href="../app.webmanifest"
+      href="/app.webmanifest"
     />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Pokédle</title>
@@ -38,7 +38,7 @@
     </div>
     <div class="container">
       <div class="logo">
-        <a href="/"><img alt="" src="../public/images/pokedle-logo.webp" /></a>
+        <a href="/"><img alt="" src="/public/images/pokedle-logo.webp" /></a>
       </div>
       <div id="subtitle">
         Sto pensando ad un Pokémon ... riesci ad indovinarlo?
@@ -79,6 +79,6 @@
       </div>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="../public/js/main.js"></script>
+    <script type="module" src="/public/js/main.js"></script>
   </body>
 </html>
